@@ -1,0 +1,4 @@
+name=Strip BiDi Marks
+description=Remove bidirectionality control characters in the current target
+title=Strip BiDi marks in current segment
+msg=Please try again after you open a project.
